--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* ********Custom Properties****** */
 :root {
-  --first-color: #1a2e55;
+  --first-color: #31549b;
   --first-alpha-color: rgba(217, 0, 98, 0.75);
   --second-color: #14192d;
   --second-alpha-color: rgba(20, 25, 45, 0.75);
@@ -17,6 +17,8 @@
   --white-alpha-color: rgba(255, 255, 255, 0.5);
   --black-alpha-color: rgba(0, 0, 0, 0.5);
   --font: "Raleway", sans-serif;
+  --max-width: 1200px;
+  --header-height: 4rem;
 }
 
 /* ***** Reset ***** */
@@ -87,10 +89,84 @@ p {
 }
 /* **** Components ****** */
 
+/* **** Menu ****** */
+.menu {
+  position: fixed;
+  left: 0;
+  bottom: var(--header-height);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s ease;
+  background-color: var(--second-color);
+}
+
+.menu.is-active {
+  opacity: 1;
+  pointer-events: auto;
+}
+.menu a {
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: var(--first-color);
+}
+
+.menu a:hover {
+  color: var(--white-color);
+  background-color: var(--first-color);
+}
+.menu-btn {
+  outline: thin solid var(--first-color);
+  border: 0;
+  cursor: pointer;
+  background-color: var(--second-color);
+}
+
+.menu-btn svg {
+  fill: var(--first-color);
+}
 /* ***** Utilities ***** */
 
 .box-shadow-1 {
   box-shadow: 0.25rem 0.25rem 0.1rem rgba(0, 0, 0, 0.25);
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: var(--max-width);
+}
+
+.none {
+  display: none;
+}
+
 /* ***** Site Styles ****** */
+
+.header {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
+  padding: 1rem;
+  width: 100%;
+  height: var(--header-height);
+  background-color: var(--second-color);
+}
+.header > .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo a {
+  color: var(--white-color);
+  font-weight: bold;
+  font-size: 2rem;
+  text-decoration: none;
+}
