--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,31 @@ p {
 }
 /* **** Components ****** */
 
+/* **** HeroImage **** */
+
+.hero-image {
+  background-image: var(--hero-image);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: var(--hero-attachment);
+}
+
+.hero-image-opacity {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: var(--hero-opacity-color);
+}
+
+.hero-image-title {
+  font-size: 7.5vw;
+  color: var(--hero-text-color);
+}
+
 /* **** Menu ****** */
 .menu {
   position: fixed;
@@ -130,10 +155,88 @@ p {
 .menu-btn svg {
   fill: var(--first-color);
 }
+
+@media screen and (min-width: 1024px) {
+  .menu-btn {
+    display: none;
+  }
+
+  .menu {
+    position: static;
+    width: auto;
+    flex-direction: row;
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .menu a {
+    padding: 0 1rem;
+  }
+
+  .menu a:last-child {
+    padding-right: 0;
+  }
+
+  .menu a:hover {
+    background-color: transparent;
+  }
+}
+
+/* **** ProgressBar **** */
+
+progress {
+  width: 100%;
+  height: 1rem;
+  background-color: var(--gray-color);
+}
+
+/*seudo clases*/
+progress::-webkit-progress-bar {
+  background-color: var(--gray-color);
+}
+/*firefox no necesita una seudo clase para el progressbar... */
+progress::-webkit-progress-value {
+  background-color: var(--gray-dark-color);
+}
+/*...pero si para el value..*/
+progress::-webkit-progress-value {
+  background-color: var(--gray-dark-color);
+}
+/*.. por lo que hay que poner: */
+progress::-moz-progress-bar {
+  background-color: var(--gray-dark-color);
+}
+
+.progress {
+  margin: 1rem auto;
+}
+.progress > p {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.85rem;
+}
+
 /* ***** Utilities ***** */
+
+.bg-gray-light {
+  background-color: var(--gray-color);
+}
 
 .box-shadow-1 {
   box-shadow: 0.25rem 0.25rem 0.1rem rgba(0, 0, 0, 0.25);
+}
+
+.btn {
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: inline-block;
+  width: 200px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: var(--white-color);
+  background-color: var(--first-color);
 }
 
 .container {
@@ -142,11 +245,57 @@ p {
   max-width: var(--max-width);
 }
 
+.gray-scale {
+  filter: grayscale(1);
+}
+
 .none {
   display: none;
 }
 
+.section {
+  padding: 2rem 1rem;
+}
+
+.section-title {
+  border-top: thin solid var(--first-color);
+  border-bottom: thin solid var(--first-color);
+  margin: 2rem auto;
+  padding: 0.5rem 1rem;
+  width: 250px;
+  text-align: center;
+  color: var(--title-color);
+}
+
+.text-center {
+  text-align: center;
+}
+
+.tex-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+@media screen and (min-width: 1024px) {
+  .text-lg-center {
+    text-align: center;
+  }
+  .text-lg-left {
+    text-align: left;
+  }
+  .text-lg-right {
+    text-align: right;
+  }
+}
+
 /* ***** Site Styles ****** */
+
+.about > article {
+  margin-bottom: 2rem;
+}
 
 .header {
   position: fixed;
@@ -169,4 +318,61 @@ p {
   font-weight: bold;
   font-size: 2rem;
   text-decoration: none;
+}
+
+.service-card {
+  margin: 1rem auto;
+  padding: 1rem;
+  text-align: center;
+}
+
+.service-card h3 {
+  color: var(--title-color);
+}
+
+.service-card svg {
+  margin-bottom: 1.25rem;
+  fill: var(--first-color);
+}
+
+@media screen and (min-width: 768px) {
+  .services > .container {
+    display: grid;
+    grid-template-columns: repeat(2, 45%);
+    justify-content: space-between;
+    align-content: center;
+  }
+
+  .services .section-title {
+    grid-column: span 2;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .full-lg-screen {
+    width: 100%;
+    min-height: 100vh;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+    justify-content: space-between;
+    align-content: center;
+  }
+
+  .header {
+    position: sticky;
+    top: 0;
+    padding: 0.5rem;
+    height: calc(var(--header-height)-0.5rem);
+  }
+
+  .services > .container {
+    grid-template-columns: repeat(4, 23.3%);
+  }
+
+  .services .section-title {
+    grid-column: span 4;
+  }
 }
