--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* ********Custom Properties****** */
 :root {
   --first-color: #31549b;
-  --first-alpha-color: rgba(217, 0, 98, 0.75);
+  --first-alpha-color: rgba(17, 128, 255, 0.75);
   --second-color: #14192d;
   --second-alpha-color: rgba(20, 25, 45, 0.75);
   --third-color: #501464;
@@ -182,6 +182,46 @@ p {
   }
 }
 
+/* **** Modal **** */
+.modal {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--black-alpha-color);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 1s;
+}
+
+.modal-content {
+  position: relative;
+}
+
+.modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.modal-close svg {
+  width: 3rem;
+  height: 3rem;
+  fill: var(--first-color);
+}
+
+/* .modal[id|="trabajo"]:target   clase modal, id que empiece con la palabra trabajo, target es que me encuentro en esa seccion*/
+
+.modal[id|="trabajo"]:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 /* **** ProgressBar **** */
 
 progress {
@@ -320,6 +360,45 @@ progress::-moz-progress-bar {
   text-decoration: none;
 }
 
+.portfolio-card {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+.portfolio-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.portfolio-card-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  background-color: var(--first-alpha-color);
+  color: var(--white-color);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.portfolio-card:hover .portfolio-card-info {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.portfolio-card-info > div {
+  padding: 1rem;
+  border: thin solid var(--white-color);
+  width: 100%;
+  height: 100%;
+}
+
 .service-card {
   margin: 1rem auto;
   padding: 1rem;
@@ -336,6 +415,15 @@ progress::-moz-progress-bar {
 }
 
 @media screen and (min-width: 768px) {
+  .portfolio > .container {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+  }
+
+  .portfolio .section-title {
+    grid-column: span 2;
+  }
+
   .services > .container {
     display: grid;
     grid-template-columns: repeat(2, 45%);
@@ -366,6 +454,15 @@ progress::-moz-progress-bar {
     top: 0;
     padding: 0.5rem;
     height: calc(var(--header-height)-0.5rem);
+  }
+
+  .portfolio > .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .portfolio .section-title {
+    grid-column: span 3;
   }
 
   .services > .container {
