--- a/styles.css
+++ b/styles.css
@@ -394,9 +394,36 @@ progress::-moz-progress-bar {
 
 .portfolio-card-info > div {
   padding: 1rem;
-  border: thin solid var(--white-color);
+  border: thin solid var(--white-color); /*borde de linea solida y fina*/
   width: 100%;
   height: 100%;
+}
+
+.portfolio-modal {
+  padding: 1rem;
+  max-width: 400px;
+  /* display y flex direction para acomodar en columnas el contenido*/
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white-color);
+}
+
+.portfolio-modal h3 {
+  border-bottom: medium solid var(--first-color);
+  margin: 1rem auto;
+  padding: 0.5rem 0;
+  color: var(--title-color);
+}
+
+.portfolio-details {
+  /*para separar el contenido en dos columnas de distintos anchos*/
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-auto-rows: 2rem;
+}
+
+.portfolio-details b {
+  color: var(--first-color);
 }
 
 .service-card {
@@ -422,6 +449,16 @@ progress::-moz-progress-bar {
 
   .portfolio .section-title {
     grid-column: span 2;
+  }
+
+  .portfolio-modal {
+    max-width: 800px;
+    flex-direction: row;
+  }
+
+  .portfolio-info {
+    margin-left: 1rem;
+    align-self: center;
   }
 
   .services > .container {
