--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,61 @@ p {
 }
 /* **** Components ****** */
 
+/* **** Carousel **** */
+.carousel {
+  margin: 2rem auto;
+  padding: 2rem 0;
+  max-width: 800px;
+  text-align: center;
+  overflow-x: hidden;
+  background-color: var(--carousel-bg-color);
+}
+
+.carousel .slides {
+  /*100% por cada slide*/
+  width: 400%;
+  display: flex;
+  list-style: none;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel input {
+  display: none;
+}
+
+.carousel label {
+  border: medium solid var(--gray-dark-color);
+  border-radius: 50%;
+  margin: 0 0.25rem;
+  display: inline-block;
+  width: 0.75rem;
+  height: 0.75rem;
+  cursor: pointer;
+}
+
+#slide-1:checked ~ .slides {
+  transform: translateX(0%);
+}
+
+#slide-2:checked ~ .slides {
+  transform: translateX(-25%);
+}
+
+#slide-3:checked ~ .slides {
+  transform: translateX(-50%);
+}
+
+#slide-4:checked ~ .slides {
+  transform: translateX(-75%);
+}
+
+#slide-1:checked ~ .slides-nav label#dot-1,
+#slide-2:checked ~ .slides-nav label#dot-2,
+#slide-3:checked ~ .slides-nav label#dot-3,
+#slide-4:checked ~ .slides-nav label#dot-4 {
+  background-color: var(--gray-dark-color);
+}
+
 /* **** HeroImage **** */
 
 .hero-image {
@@ -258,6 +313,11 @@ progress::-moz-progress-bar {
 }
 
 /* ***** Utilities ***** */
+.avatar {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
 
 .bg-gray-light {
   background-color: var(--gray-color);
@@ -305,6 +365,10 @@ progress::-moz-progress-bar {
   width: 250px;
   text-align: center;
   color: var(--title-color);
+}
+
+.text-first-color {
+  color: var(--first-color);
 }
 
 .text-center {
