--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,93 @@ p {
   background-color: var(--gray-dark-color);
 }
 
+/* **** Contact Form **** */
+
+.contact-form {
+  margin: 2rem auto;
+  padding: 1rem;
+  max-width: 800px;
+}
+
+.contact-form > * {
+  padding: 0.5rem;
+  margin: 1rem auto;
+  display: block;
+  width: 100%;
+}
+
+.contact-form input,
+.contact-form textarea {
+  font-size: 0.85rem;
+  font-family: var(--font);
+}
+
+.contact-form input {
+  border: 0;
+  padding-left: 0;
+  border-bottom: thin solid var(--gray-dark-color);
+}
+
+.contact-form textarea {
+  border: thin solid var(--gray-dark-color);
+  resize: none;
+}
+
+.contact-form input[type="submit"] {
+  margin-top: 0;
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
+
+.contact-form input[type="submit"]:hover {
+  opacity: 70%;
+}
+
+.contact-form *::placeholder {
+  color: var(--gray-dark-color);
+}
+
+.contact-form-response {
+  padding: 1rem;
+  width: 400px;
+  text-align: center;
+  background-color: var(--white-color);
+}
+
+.contact-form-response svg {
+  margin-top: 2rem;
+  width: 4rem;
+  height: 4rem;
+  fill: var(--first-color);
+}
+
+.modal#gracias:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+@media screen and (min-width: 1024px) {
+  .contact-form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+  }
+
+  .contact-form input,
+  .contact-form textarea {
+    font-size: 1rem;
+  }
+
+  .contact-form textarea,
+  .contact-form-loader {
+    grid-column: span 2;
+  }
+
+  .contact-form input[type="submit"] {
+    margin-left: 0;
+  }
+}
+
 /* **** HeroImage **** */
 
 .hero-image {
@@ -422,6 +509,35 @@ progress::-moz-progress-bar {
   margin-bottom: 2rem;
 }
 
+.contact-card {
+  margin: 1rem auto;
+  padding: 1rem;
+  width: 100%;
+  height: 144px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.contact-card > svg {
+  width: 2rem;
+  height: 2rem;
+  fill: var(--first-color);
+}
+
+.contact-card > small {
+  margin-top: -1rem;
+}
+
+.footer {
+  margin-bottom: var(--header-height);
+  padding: 0.5rem;
+  text-align: center;
+  color: var(--white-color);
+  background-color: var(--black-color);
+}
+
 .header {
   position: fixed;
   left: 0;
@@ -526,7 +642,23 @@ progress::-moz-progress-bar {
   fill: var(--first-color);
 }
 
+.sc-media > a {
+  padding: 0 0.4rem;
+  text-decoration: none;
+}
+
+.sc-media svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 @media screen and (min-width: 768px) {
+  .contact-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 48%);
+    justify-content: space-between;
+  }
+
   .portfolio > .container {
     display: grid;
     grid-template-columns: repeat(2, 50%);
@@ -559,6 +691,10 @@ progress::-moz-progress-bar {
 }
 
 @media screen and (min-width: 1024px) {
+  .footer {
+    margin-bottom: 0;
+  }
+
   .full-lg-screen {
     width: 100%;
     min-height: 100vh;
@@ -569,6 +705,10 @@ progress::-moz-progress-bar {
     grid-template-columns: repeat(3, 30%);
     justify-content: space-between;
     align-content: center;
+  }
+
+  .contact-cards {
+    grid-template-columns: repeat(4, 24%);
   }
 
   .header {
